Fix scrollbar-always-visible bug
For some reason, jQuery UI's old clearfix hack nowadays (after I switched to
Bootstrap 3.0.0 I think) results in a certain dialog Y-scrollbar always being
shown.  Switch to Bootstrap's clearfix hack instead — then problem gone.

--- a/client/page/styles/debiki-play.styl
+++ b/client/page/styles/debiki-play.styl
@@ -1488,15 +1488,16 @@ form .dw-ntf
 // Clearfix
 //---------------------------
 
-.dw-fs:after,       // Contents might float
-.dw-fs form:after,  // Contents might float
-.dw-f.dw-f-e:after  // I suppose some edit form child floats left?
-  // Copied from jquery-ui-1.8.16.custom.css.
-  content: "."
-  display: block
-  height: 0
-  clear: both
-  visibility: hidden
+.dw-fs,       // Contents might float
+.dw-fs form,  // Contents might float
+.dw-f.dw-f-e  // I suppose some edit form child floats left?
+  // Copied from Bootstrap 3.0.0's less/mixin.less.
+  &:before, &:after
+    content: " "
+    display: table
+
+  &:after
+    clear: both;
 
 
 
